--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="https://raw.githubusercontent.com/llsnicollas/LLSnicollas.github.io/branch/path/to/style.css" />
   </head>
   <body>
     <div class="container">
