--- a/index.html
+++ b/index.html
@@ -404,6 +404,6 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
-    <script src="https://raw.githubusercontent.com/llsnicollas/LLSnicollas.github.io/branch/path/to/script.js"></script>
+    <script src="https://raw.githubusercontent.com/LLSnicollas/LLSnicollas.github.io/main/script.js"></script>
   </body>
 </html>
