--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@ h3 {
             <img
               width="400"
               height="200"
-              src="E:\FreeSample-Vectorizer-io-Good_Fun__1_-removebg.png"
+              src="https://i.imgur.com/hKI7UWJ.png"
             />
           </div>
           <p>
