--- a/index.html
+++ b/index.html
@@ -782,7 +782,7 @@ h3 {
         <a href="https://www.artstation.com/llsnicollas" target="_blank" title="Artstation">
           <i class="fab fa-artstation"></i>
         </a>
-        <a href="https://www.linkedin.com/" target="_blank" title="Twitter">
+        <a href="https://www.linkedin.com/" target="_blank" title="Linkedin">
           <i class="fab fa-linkedin"></i>
         </a>
         <a href="https://www.instagram.com/LLSNICOLLAS/" target="_blank" title="Instagram">
