--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      background: #ffd4a3;
-      color: #0d2b45;
+      background: #f9fff6;
+      color: #008080;
       width: 100%;
       overflow-x: hidden;
       /* Prevent horizontal overflow */
@@ -36,7 +36,7 @@
       position: fixed;
       top: 0;
       width: 100%;
-      background-color: #ffaa5e;
+      background-color: #008080;
       box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.1);
       /* 2px = 0.125rem, 4px = 0.25rem */
     }
@@ -55,8 +55,8 @@
       font-size: 1.125rem;
       /* 18px = 1.125rem */
       font-weight: bold;
-      color: #203c56;
-      background-color: #ffd4a3;
+      color: #008080;
+      background-color: #f9fff6;
       padding: 0.625rem 1.25rem;
       /* 10px = 0.625rem, 20px = 1.25rem */
       border-radius: 0.3125rem;
@@ -68,17 +68,17 @@
     }
 
     .book-marker:hover {
-      background-color: #ffaa5e;
+      background-color: #b9bbb6;
       box-shadow: 0 0.25rem 0.375rem rgba(0, 0, 0, 0.1);
       /* 4px = 0.25rem, 6px = 0.375rem */
     }
 
     .book-marker:active {
-      background-color: #0d2b45;
+      background-color: #ffffff;
     }
 
     .book-marker.selected {
-      background-color: #ffaa5e;
+      background-color: #008080;
       box-shadow: 0 0.25rem 0.375rem rgba(0, 0, 0, 0.1);
       /* 4px = 0.25rem, 6px = 0.375rem */
     }
@@ -94,13 +94,13 @@
       margin: 0 auto;
       margin-top: 1.25rem;
       /* 20px = 1.25rem */
-      border: 0.0625rem solid #ffd4a3;
+      border: 0.0625rem solid #f9fff6;
       /* 1px = 0.0625rem */
       border-radius: 0.625rem;
       /* 10px = 0.625rem */
       padding: 1.25rem;
       /* 20px = 1.25rem */
-      background-color: #ffd4a3;
+      background-color: #f9fff6;
     }
 
     .content {
@@ -128,7 +128,7 @@
       max-width: 12.5rem;
       /* 200px = 12.5rem */
       border-radius: 50%;
-      border: 5px solid #d08159;
+      border: 5px solid #008080;
     }
 
     .name {
@@ -158,7 +158,7 @@
 
     .greetings {
       font-weight: bold;
-      color: #203c56;
+      color: #008080;
       /* Changing color of greetings */
     }
 
@@ -169,7 +169,7 @@
       /* 20px = 1.25rem */
       border: none;
       /* Remove default border */
-      border-top: 0.125rem solid #d08159;
+      border-top: 0.125rem solid #008080;
       /* 2px = 0.125rem */
     }
 
@@ -189,7 +189,7 @@
       /* 20px = 1.25rem */
       padding: 1.25rem;
       /* 20px = 1.25rem */
-      background-color: #ffd4a3;
+      background-color: #f9fff6;
       border-radius: 0.625rem;
       /* 10px = 0.625rem */
       display: flex;
@@ -213,7 +213,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      background-color: #ffaa5e;
+      background-color: #f9fff6;
       border-radius: 1.25rem;
       /* 20px = 1.25rem */
       box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.1);
@@ -232,7 +232,7 @@
     }
 
     .project-card.selected {
-      background-color: #ffd4a3;
+      background-color: #b9bbb6;
     }
 
     .project-image {
@@ -271,7 +271,7 @@
     }
 
     .bottom-container {
-      background-color: #ffd4a3;
+      background-color: #f9fff6;
       padding: 1.25rem;
       /* 20px = 1.25rem */
       text-align: center;
@@ -298,7 +298,7 @@
     }
 
     .list-group-horizontal {
-      background-color: #ffaa5e;
+      background-color: #008080;
     }
 
     .tags {
@@ -317,12 +317,12 @@
     .tags a i {
       font-size: 3rem;
       /* 48px = 3rem */
-      color: #203c56;
+      color: #008080;
     }
 
     .tag-container {
       display: inline-block;
-      border: 0.125rem solid #0d2b45;
+      border: 0.125rem solid #008080;
       /* 2px = 0.125rem */
       border-radius: 0.3125rem;
       /* 5px = 0.3125rem */
@@ -331,25 +331,25 @@
     }
 
     .tag {
-      background-color: #0d2b45;
+      background-color: #008080;
       /* Background color for tags */
-      color: #ffd4a3;
+      color: #f9fff6;
       padding: 0.25rem 0.25rem;
       /* 4px = 0.25rem */
-      border: 0.0625rem solid #0d2b45;
+      border: 0.0625rem solid #008080;
       /* 1px = 0.0625rem */
       border-radius: 0.0625rem;
       /* 1px = 0.0625rem */
     }
 
     .tag-value {
-      background-color: #ffaa5e;
+      background-color: #f9fff6;
       /* Background color for tag values */
       padding: 0.25rem 0.25rem;
       /* 4px = 0.25rem */
       margin-left: -0.4375rem;
       /* -7px = -0.4375rem */
-      border: 0.0625rem solid #0d2b45;
+      border: 0.0625rem solid #008080;
       /* 1px = 0.0625rem */
       border-radius: 0.125rem;
       /* 2px = 0.125rem */
@@ -387,7 +387,7 @@
       right: 0;
       width: 0.0625rem;
       /* 1px = 0.0625rem */
-      background-color: #d08159;
+      background-color: #008080;
       /* Change color of the line */
     }
 
@@ -434,7 +434,7 @@
       /* 600px = 37.5rem */
       height: 3.125rem;
       /* 50px = 3.125rem */
-      background-color: #ffaa5e;
+      background-color: #f9fff6;
       /* Changed background color */
       border-radius: 0.3125rem;
       /* 5px = 0.3125rem */
@@ -446,15 +446,16 @@
       height: 100%;
       border-radius: 0.3125rem;
       /* 5px = 0.3125rem */
-      background-color: #d08159;
+      background-color: #008080;
       /* Changed color of skill level bars */
-      color: #0d2b45;
+      color: #f9fff6;
       text-align: left;
       padding-left: 0.625rem;
       /* 10px = 0.625rem */
       line-height: 3.125rem;
       /* 50px = 3.125rem */
       font-weight: bold;
+      border-color: #008080;
     }
 
     .skills-container {
@@ -497,17 +498,18 @@
       /* 40px = 2.5rem */
       margin: 0 0.625rem;
       /* 10px = 0.625rem */
-      background-color: #ffaa5e;
+      background-color: #008080;
       border-radius: 50%;
       line-height: 2.8125rem;
       /* 45px = 2.8125rem */
       text-align: center;
-      color: #0d2b45;
+      color: #f9fff6;
     }
 
     .social-links a:hover {
-      background-color: #ffd4a3;
+      background-color: #f9fff6;
       /* Change background color on hover */
+      color: #008080;
     }
 
     .social-links a i {
@@ -552,7 +554,7 @@
       /* 600px / 16px */
       height: 25rem;
       /* 400px / 16px */
-      background-color: #2b2b2b;
+      background-color: #008080;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -565,7 +567,7 @@
     }
 
     .highlighted {
-      border: 0.125rem solid #203c56;
+      border: 0.125rem solid #008080;
       /* 2px / 16px */
       padding: 0.625rem;
       /* 10px / 16px */
@@ -580,7 +582,7 @@
       margin-bottom: 0.625rem;
       /* 10px = 0.625rem */
       font-weight: bold;
-      color: #203c56;
+      color: #008080;
     }
 
     h2 {
